# dixday-predictions

./: .bumpversion.cfg  README.md  build.sh  project.toml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
dixday-predictions/: runner.py
dixday-predictions/eventhandler/: EventHandler.py
dixday_predictions/: runner.py
dixday_predictions/eventhandler/: EventHandler.py
dp-pipeline-module-name/: runner.py
dp-pipeline-module-name/eventhandler/: EventHandler.py
tests/: config.yaml  test_dixday_predictions.py  test_pythongenericmodule.py
tests/test_config/: config.yaml
tests/test_csv/: pdm_temp1.csv
